Fix progress bar text alignment Fix layout loading to correctly send current # of windows and clients

--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -748,7 +748,7 @@ body {
 }
 
 .progressbar .progressbar-text {
-    left: 20px;
+    left: 0px;
     right: 0px;
     text-align: center;
     background-color: transparent;
