--- a/src/themes/zen.scss
+++ b/src/themes/zen.scss
@@ -766,7 +766,7 @@ body {
     display: inline-block;
 }
 .progressbar .progressbar-text {
-    left: 20px;
+    left: 0px;
     right: 0px;
     text-align: center;
     background-color: transparent;
